--- a/internal/projects/bulleit/Stamped/InboxViewController.xib
+++ b/internal/projects/bulleit/Stamped/InboxViewController.xib
@@ -64,7 +64,7 @@
 							<object class="IBUIButton" id="372919310">
 								<reference key="NSNextResponder" ref="566224778"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{38, 48}</string>
+								<string key="NSFrameSize">{43, 48}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="606200188"/>
@@ -89,14 +89,14 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="NSCustomResource" key="IBUIHighlightedImage" id="373209715">
+								<object class="NSCustomResource" key="IBUIHighlightedImage" id="890805051">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">sort_icon_place_1</string>
+									<string key="NSResourceName">sort_icon_food_1</string>
 								</object>
-								<reference key="IBUISelectedImage" ref="373209715"/>
+								<reference key="IBUISelectedImage" ref="890805051"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">sort_icon_place_0</string>
+									<string key="NSResourceName">sort_icon_food_0</string>
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="269923467">
 									<string key="name">Helvetica-Bold</string>
@@ -113,10 +113,10 @@
 							<object class="IBUIButton" id="606200188">
 								<reference key="NSNextResponder" ref="566224778"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{46, 0}, {38, 48}}</string>
+								<string key="NSFrame">{{46, 0}, {43, 48}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="79025483"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -132,14 +132,14 @@
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="228111456"/>
-								<object class="NSCustomResource" key="IBUIHighlightedImage" id="852067793">
+								<object class="NSCustomResource" key="IBUIHighlightedImage" id="838817976">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">sort_icon_book_1</string>
+									<string key="NSResourceName">sort_icon_books_1</string>
 								</object>
-								<reference key="IBUISelectedImage" ref="852067793"/>
+								<reference key="IBUISelectedImage" ref="838817976"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">sort_icon_book_0</string>
+									<string key="NSResourceName">sort_icon_books_0</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="269923467"/>
 								<reference key="IBUIFont" ref="111235656"/>
@@ -147,7 +147,7 @@
 							<object class="IBUIButton" id="79025483">
 								<reference key="NSNextResponder" ref="566224778"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{92, 0}, {38, 48}}</string>
+								<string key="NSFrame">{{92, 0}, {43, 48}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="68374884"/>
@@ -181,7 +181,7 @@
 							<object class="IBUIButton" id="68374884">
 								<reference key="NSNextResponder" ref="566224778"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{138, 0}, {38, 48}}</string>
+								<string key="NSFrame">{{138, 0}, {43, 48}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="795149255"/>
@@ -215,7 +215,7 @@
 							<object class="IBUIButton" id="795149255">
 								<reference key="NSNextResponder" ref="566224778"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{184, 0}, {38, 48}}</string>
+								<string key="NSFrame">{{184, 0}, {43, 48}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="903731289"/>
@@ -234,14 +234,14 @@
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="228111456"/>
-								<object class="NSCustomResource" key="IBUIHighlightedImage" id="147709422">
+								<object class="NSCustomResource" key="IBUIHighlightedImage" id="1051483174">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">sort_icon_more_1</string>
+									<string key="NSResourceName">sort_icon_other_1</string>
 								</object>
-								<reference key="IBUISelectedImage" ref="147709422"/>
+								<reference key="IBUISelectedImage" ref="1051483174"/>
 								<object class="NSCustomResource" key="IBUINormalImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">sort_icon_more_0</string>
+									<string key="NSResourceName">sort_icon_other_0</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="269923467"/>
 								<reference key="IBUIFont" ref="111235656"/>
@@ -252,6 +252,7 @@
 								<string key="NSFrame">{{282, -1}, {38, 48}}</string>
 								<reference key="NSSuperview" ref="566224778"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="IBUIContentStretch">{{0, 1.3877799999999999e-17}, {1, 1}}</string>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -337,43 +338,51 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">booksFilterButton_</string>
+						<string key="label">booksFilterButton</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="606200188"/>
 					</object>
-					<int key="connectionID">29</int>
+					<int key="connectionID">44</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">filmsFilterButton_</string>
+						<string key="label">filmFilterButton</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="79025483"/>
 					</object>
-					<int key="connectionID">30</int>
+					<int key="connectionID">45</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">musicFilterButton_</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="68374884"/>
-					</object>
-					<int key="connectionID">31</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">placesFilterButton_</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="372919310"/>
-					</object>
-					<int key="connectionID">32</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">filterView_</string>
+						<string key="label">filterView</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="566224778"/>
 					</object>
-					<int key="connectionID">33</int>
+					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">foodFilterButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="372919310"/>
+					</object>
+					<int key="connectionID">47</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">musicFilterButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="68374884"/>
+					</object>
+					<int key="connectionID">48</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">otherFilterButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="795149255"/>
+					</object>
+					<int key="connectionID">49</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -426,6 +435,15 @@
 						<int key="IBEventType">1</int>
 					</object>
 					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">filterButtonPushed:</string>
+						<reference key="source" ref="795149255"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">1</int>
+					</object>
+					<int key="connectionID">51</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -557,7 +575,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="2"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<real value="0.0"/>
+					<real value="2"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<real value="1"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -578,14 +596,14 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">43</int>
+			<int key="maxID">51</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
 					<string key="className">InboxViewController</string>
-					<string key="superclassName">UITableViewController</string>
+					<string key="superclassName">STReloadableTableViewController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<string key="NS.key.0">filterButtonPushed:</string>
 						<string key="NS.object.0">id</string>
@@ -601,12 +619,12 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>booksFilterButton_</string>
-							<string>filmsFilterButton_</string>
-							<string>filterView_</string>
-							<string>musicFilterButton_</string>
-							<string>placesFilterButton_</string>
-							<string>reloadLabel_</string>
+							<string>booksFilterButton</string>
+							<string>filmFilterButton</string>
+							<string>filterView</string>
+							<string>foodFilterButton</string>
+							<string>musicFilterButton</string>
+							<string>otherFilterButton</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -615,51 +633,59 @@
 							<string>UIView</string>
 							<string>UIButton</string>
 							<string>UIButton</string>
-							<string>UILabel</string>
+							<string>UIButton</string>
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>booksFilterButton_</string>
-							<string>filmsFilterButton_</string>
-							<string>filterView_</string>
-							<string>musicFilterButton_</string>
-							<string>placesFilterButton_</string>
-							<string>reloadLabel_</string>
+							<string>booksFilterButton</string>
+							<string>filmFilterButton</string>
+							<string>filterView</string>
+							<string>foodFilterButton</string>
+							<string>musicFilterButton</string>
+							<string>otherFilterButton</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBToOneOutletInfo">
-								<string key="name">booksFilterButton_</string>
+								<string key="name">booksFilterButton</string>
 								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">filmsFilterButton_</string>
+								<string key="name">filmFilterButton</string>
 								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">filterView_</string>
+								<string key="name">filterView</string>
 								<string key="candidateClassName">UIView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">musicFilterButton_</string>
+								<string key="name">foodFilterButton</string>
 								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">placesFilterButton_</string>
+								<string key="name">musicFilterButton</string>
 								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
-								<string key="name">reloadLabel_</string>
-								<string key="candidateClassName">UILabel</string>
+								<string key="name">otherFilterButton</string>
+								<string key="candidateClassName">UIButton</string>
 							</object>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/InboxViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">STReloadableTableViewController</string>
+					<string key="superclassName">UITableViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/STReloadableTableViewController.h</string>
 					</object>
 				</object>
 			</object>
@@ -677,16 +703,16 @@
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>shelf_background.png</string>
-				<string>sort_icon_book_0</string>
-				<string>sort_icon_book_1</string>
+				<string>sort_icon_books_0</string>
+				<string>sort_icon_books_1</string>
 				<string>sort_icon_film_0</string>
 				<string>sort_icon_film_1</string>
-				<string>sort_icon_more_0</string>
-				<string>sort_icon_more_1</string>
+				<string>sort_icon_food_0</string>
+				<string>sort_icon_food_1</string>
 				<string>sort_icon_music_0</string>
 				<string>sort_icon_music_1</string>
-				<string>sort_icon_place_0</string>
-				<string>sort_icon_place_1</string>
+				<string>sort_icon_other_0</string>
+				<string>sort_icon_other_1</string>
 				<string>sort_icon_search_0</string>
 				<string>sort_icon_search_1</string>
 			</object>
